--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -6272,6 +6272,9 @@ div, span, ul, ol, li, dd, dt, table, td, th, tr, em, i, strong, b, h1, h2, h3, 
   padding: 0;
   line-height: inherit; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Josefin Sans", Helvetica, Calibri, sans-serif; }
+
 html, body {
   min-height: 100%;
   position: relative; }
@@ -6280,7 +6283,7 @@ body {
   background: #324D5C;
   color: #ffffff;
   font-family: "Open Sans", Helvetica, Calibri, sans-serif;
-  font-size: 24px; }
+  font-size: 16px; }
 
 .content {
   padding: 20px; }
@@ -6289,12 +6292,30 @@ body {
   border-color: #2b424f !important; }
 
 header {
-  background: #304a59;
-  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.3); }
+  background: #f2d165;
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.3);
+  border-bottom: 5px solid #5BB59F; }
+
+nav .border-top {
+  border-color: #eec335 !important; }
+
+article {
+  max-width: 40em;
+  text-align: justify;
+  margin: 0 auto; }
 
 footer {
-  background: #304a59;
-  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.3); }
+  background: #365363;
+  box-shadow: inset 0 2px 2px -2px rgba(0, 148, 148, 0.3); }
+
+.flex-grow {
+  flex: 1; }
+
+.no-padding {
+  padding: 0 !important; }
+
+.full-viewport-height {
+  min-height: 100vh; }
 
 .text-spaced {
   letter-spacing: 0.2rem; }
@@ -6324,7 +6345,7 @@ footer {
   color: #F0CA4D; }
 
 .color7 {
-  color: #E37B40; }
+  color: #FA8658; }
 
 .color8 {
-  color: #46B29D; }
+  color: #5BB59F; }
