--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -31,6 +31,10 @@
     letter-spacing: 0.2rem; 
 }
 
+.text-big {
+    font-size: 1.3rem;
+}
+
 .font-default {
     font-family: $fontfamily_default;
 }
@@ -38,6 +42,5 @@
 .font-heading {
     font-family: $fontfamily_heading;
 }
-
 
 
