--- a/app/css/mixins.css
+++ b/app/css/mixins.css
@@ -26,13 +26,13 @@
   border: 1px solid #454445; }
 
 .color4 {
-  color: #F5F2DC; }
+  color: #e9ecef; }
 
 .bg4 {
-  background-color: #F5F2DC; }
+  background-color: #e9ecef; }
 
 .border4 {
-  border: 1px solid #F5F2DC; }
+  border: 1px solid #e9ecef; }
 
 .color5 {
   color: #DE5B49; }
