--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6295,13 +6295,13 @@ a.text-dark:hover, a.text-dark:focus {
   border: 1px solid #454445; }
 
 .color4 {
-  color: #F5F2DC; }
+  color: #e9ecef; }
 
 .bg4 {
-  background-color: #F5F2DC; }
+  background-color: #e9ecef; }
 
 .border4 {
-  border: 1px solid #F5F2DC; }
+  border: 1px solid #e9ecef; }
 
 .color5 {
   color: #DE5B49; }
@@ -6380,11 +6380,20 @@ footer {
 [v-cloak] {
   display: none; }
 
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
 .content {
   padding: 20px; }
 
 .blocks .border-top {
   border-color: #2b424f !important; }
+
+.overflow-hidden {
+  overflow: hidden; }
 
 .flex-grow {
   flex: 1; }
@@ -6401,8 +6410,20 @@ footer {
 .text-big {
   font-size: 1.3rem; }
 
+.text-small {
+  font-size: 0.9rem; }
+
 .font-default {
   font-family: "Open Sans", Helvetica, Calibri, sans-serif; }
 
 .font-heading {
   font-family: "Josefin Sans", Helvetica, Calibri, sans-serif; }
+
+.bg-white {
+  background-color: #ffffff; }
+
+.border-white {
+  border: 1px solid #ffffff; }
+
+.border-grey {
+  border: 1px solid #ced4da; }
