--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -4,12 +4,13 @@
 $color1: #324D5C;
 $color2: #009494;
 $color3: #454445;
-$color4: #F5F2DC;
+$color4: #e9ecef;
 $color5: #DE5B49;
 $color6: #F0CA4D;
 $color7: #FA8658;
 $color8: #5BB59F;
 $color_white: #ffffff;
+$color_greylight: #ced4da;
 
 // Shadow
 $shadow_default: 0 2px 2px -2px rgba(0,0,0,0.3);
